# Steno

./: .claudeignore  .env  .gitattributes  .gitignore  CONTRIBUTING.md  README.en_US.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.local.config.mts
docs/screenshots/: README.md
scripts/: build-macos-dmg.mjs
src/: App.test.ts  App.vue  env.d.ts  main.ts  tauriConfig.test.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: logging.rs  mod.rs  quicknote.rs  shortcut.rs  tray.rs  window_manager.rs
src-tauri/src/data/: backup.rs  cleanup_scheduler.rs  db.rs  mod.rs  sync.rs  workspace_fs.rs
src-tauri/src/domain/: clipboard.rs  mod.rs  models.rs  todo.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/services/: export.rs  mod.rs  reminder_scheduler.rs
src/components/: Canvas.test.ts  Canvas.vue  DocumentOutlineTree.test.ts  DocumentOutlineTree.vue  EntryTypeBadge.vue  FloatingEditor.test.ts  FloatingEditor.vue  MainWorkbenchShell.test.ts  MainWorkbenchShell.vue  MarkdownEditor.test.ts  MarkdownEditor.vue  MarkdownReadSurface.test.ts  MarkdownReadSurface.vue  WorkspacePickerDialog.vue  WorkspaceTreePanel.test.ts  WorkspaceTreePanel.vue
src/composables/: useAppEvents.ts  useAutosave.ts  useDb.ts  useDraggableResizable.test.ts  useDraggableResizable.ts  useImageEditor.test.ts  useImageEditor.ts  useMarkdown.ts  useMarkdownOutline.ts  (+9 more)
(+150 files in other folders)
